[gd_scene load_steps=5 format=3 uid="uid://dh4l7xy82mu0v"]

[ext_resource type="Script" path="res://scripts/bubble_gum.gd" id="1_mqhyr"]
[ext_resource type="Texture2D" uid="uid://dawgxl44jfm6e" path="res://sprites/bubbleProjectile.png" id="2_ax0he"]

[sub_resource type="SphereShape3D" id="SphereShape3D_vdlf3"]

[sub_resource type="SphereShape3D" id="SphereShape3D_r5wr2"]

[node name="Bubble_Gum" type="RigidBody3D"]
collision_layer = 2
collision_mask = 2
gravity_scale = 0.0
contact_monitor = true
max_contacts_reported = 10
script = ExtResource("1_mqhyr")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(0.11, 0, 0, 0, 0.11, 0, 0, 0, 0.11, 0, 0, 0)
modulate = Color(1, 0, 1, 1)
texture = ExtResource("2_ax0he")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(0.08, 0, 0, 0, 0.08, 0, 0, 0, 0.08, 0, 0, 0)
shape = SubResource("SphereShape3D_vdlf3")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("SphereShape3D_r5wr2")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
